--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-03 21:54+0530\n"
-"PO-Revision-Date: 2024-03-08 23:42-0300\n"
+"POT-Creation-Date: 2024-03-10 23:18+0530\n"
+"PO-Revision-Date: 2024-03-10 17:23-0300\n"
 "Last-Translator: Luiz Lima\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -19,6 +19,7 @@ msgstr ""
 "X-Generator: Poedit 3.4.2\n"
 
 #: data/io.github.amit9838.mousam.desktop.in:3
+#: data/io.github.amit9838.mousam.appdata.xml.in:6
 msgid "Mousam"
 msgstr "Mousam"
 
@@ -31,10 +32,6 @@ msgstr "Belo e leve aplicativo de clima"
 msgid "Weather;Mousam;Rain;Cloud;Forecast;"
 msgstr "Clima;Mousam;Chuva;Nuvem;Previsao;"
 
-#: data/io.github.amit9838.mousam.appdata.xml.in:6
-msgid "Weather"
-msgstr "Clima"
-
 #: data/io.github.amit9838.mousam.appdata.xml.in:9
 msgid "Current Weather conditions and forcasts."
 msgstr "Condições de clima atual e previsões."
@@ -45,11 +42,11 @@ msgstr "Recursos:"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:12
 msgid ""
-"Displays real-time temperature, humidity, and wind speed,UV index,pressure "
-"and more"
+"Displays real-time temperature, humidity, wind speed, UV index, pressure and "
+"more"
 msgstr ""
-"Exibe temperatura, umidade e velocidade do vento em tempo real, índice UV, "
-"pressão atmosférica e mais"
+"Exibe temperatura, umidade e velocidade do vento, índice UV, pressão "
+"atmosférica e mais em tempo real"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:13
 msgid ""
@@ -57,9 +54,9 @@ msgid ""
 "graphs and wind-speed with direction to provide an hourly forecast for the "
 "next 24 hours"
 msgstr ""
-"Utiliza representações gráficas, como temperatura, gráficos de "
-"precipitação e velocidade do vento com direção, para fornecer uma previsão "
-"a cada hora para as próximas 24 horas"
+"Utiliza representações gráficas, como temperatura, gráficos de precipitação "
+"e velocidade do vento com direção, para fornecer uma previsão a cada hora "
+"para as próximas 24 horas"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:14
 msgid "Also provides tomorrow and 7-day forcasts"
@@ -101,8 +98,8 @@ msgstr "Lista de cidades e suas coordenadas."
 msgid ""
 "Stores locations added by user in json stringified string format in string"
 msgstr ""
-"Armazena locais adicionados pelo usuário em um formato de string "
-"JSONificada em uma string"
+"Armazena locais adicionados pelo usuário em um formato de string JSONificada "
+"em uma string"
 
 #: data/io.github.amit9838.mousam.gschema.xml:12
 msgid "Selected city"
@@ -124,59 +121,271 @@ msgstr ""
 "climática"
 
 #: data/io.github.amit9838.mousam.gschema.xml:23
+msgid "Use Inch for precipitation"
+msgstr "Usar polegadas para precipitação"
+
+#: data/io.github.amit9838.mousam.gschema.xml:28
 msgid "Launch the app in maximized mode."
 msgstr "Lançar o aplicativo em tela cheia."
 
-#: data/io.github.amit9838.mousam.gschema.xml:28
+#: data/io.github.amit9838.mousam.gschema.xml:33
 msgid "Mesaurement sysytem to use - metric,imperial"
 msgstr "Sistema de medias para utilizar - métrico,imperial"
 
-#: data/io.github.amit9838.mousam.gschema.xml:29
+#: data/io.github.amit9838.mousam.gschema.xml:34
 msgid "metric(km, °C), imperial(mile, °F)"
 msgstr "métrico(km, °C), imperial(milha, °F)"
 
-#: src/frontendForecast.py:33 src/frontendForecast.py:122
-msgid "Tomorrow"
-msgstr "Amanhã"
+#: src/frontendCardAirPollution.py:43
+msgid "Air Pollution"
+msgstr "Poluição do Ar"
 
-#: src/frontendForecast.py:39
-msgid "Weekly"
-msgstr "Semanal"
+#: src/frontendCardAirPollution.py:53
+msgid "United States AQI standard"
+msgstr "Padrão AQI dos Estados Unidos"
 
-#: src/frontendForecast.py:120
-msgid "Today"
-msgstr "Hoje"
+#: src/frontendCardDayNight.py:73
+msgid "Sunrise & Sunset"
+msgstr "Amanhecer e Por do Sol"
 
-#: src/frontendHourlyDetails.py:46
-msgid "Hourly"
-msgstr "Por Hora"
+#: src/frontendCardDayNight.py:84
+msgid "Sunrise"
+msgstr "Amanhecer"
 
-#: src/frontendHourlyDetails.py:53
+#: src/frontendCardDayNight.py:97
+msgid "Sunset"
+msgstr "Por do Sol"
+
+#: src/frontendCardSquare.py:162 src/frontendCardSquare.py:170
+msgid "North"
+msgstr "Norte"
+
+#: src/frontendCardSquare.py:163
+msgid "Northeast"
+msgstr "Nordeste"
+
+#: src/frontendCardSquare.py:164
+msgid "East"
+msgstr "Leste"
+
+#: src/frontendCardSquare.py:165
+msgid "Southeast"
+msgstr "Sudeste"
+
+#: src/frontendCardSquare.py:166
+msgid "South"
+msgstr "Sul"
+
+#: src/frontendCardSquare.py:167
+msgid "Southwest"
+msgstr "Sudoeste"
+
+#: src/frontendCardSquare.py:168
+msgid "West"
+msgstr "Oeste"
+
+#: src/frontendCardSquare.py:169 src/mousam.py:249
+msgid "Northwest"
+msgstr "Noroeste"
+
+#: src/frontendCardSquare.py:179 src/frontendHourlyDetails.py:58
 msgid "Wind"
 msgstr "Vento"
 
-#: src/frontendHourlyDetails.py:60
+#: src/frontendCardSquare.py:180
+msgid "Pressure"
+msgstr "Pressão"
+
+#: src/frontendCardSquare.py:181
+msgid "Humidity"
+msgstr "Humidade"
+
+#: src/frontendCardSquare.py:182
+msgid "UV Index"
+msgstr "Índice UV"
+
+#: src/frontendCurrentCond.py:87
+#, python-brace-format
+msgid "Feels Like • <b> {0} {1}</b>"
+msgstr "Sensação Térmica de • <b> {0} {1}</b>"
+
+#: src/frontendForecast.py:36 src/frontendForecast.py:127
+msgid "Tomorrow"
+msgstr "Amanhã"
+
+#: src/frontendForecast.py:43
+msgid "Weekly"
+msgstr "Semanal"
+
+#: src/frontendForecast.py:125
+msgid "Today"
+msgstr "Hoje"
+
+#: src/frontendHourlyDetails.py:50
+msgid "Hourly"
+msgstr "Por Hora"
+
+#: src/frontendHourlyDetails.py:66
 msgid "Precipitation"
 msgstr "Precipitação"
 
-#: src/mousam.py:72
+#: src/frontendHourlyDetails.py:126
+msgid "Day High"
+msgstr "Máxima Diária"
+
+#: src/frontendHourlyDetails.py:164
+msgid "No precipitation today !"
+msgstr "Sem precipitação para hoje!"
+
+#: src/frontendHourlyDetails.py:165
+msgid "No precipitation expected today!"
+msgstr "Sem precipitação prevista para hoje!"
+
+#: src/frontendHourlyDetails.py:166
+msgid "Anticipate a precipitation-free day !"
+msgstr "Antecipe um dia livre de precipitação!"
+
+#: src/frontendHourlyDetails.py:167
+msgid "Enjoy a rain-free day today!"
+msgstr "Hoje aproveite um dia livre de chuva!"
+
+#: src/frontendHourlyDetails.py:168
+msgid "Umbrella status: resting. No precipitation in sight !"
+msgstr "Status de guarda chuva: em descanso. Sem precipitação em vista!"
+
+#: src/frontendHourlyDetails.py:169
+msgid "No rain in sight today!"
+msgstr "Sem vista prevista para hoje!"
+
+#: src/frontendHourlyDetails.py:198
+msgid "Now"
+msgstr "Agora"
+
+#: src/frontendUiDrawDayNight.py:89
+msgid "Horizon"
+msgstr "Horizonte"
+
+#: src/frontendUiDrawDayNight.py:99
+msgid "Midnight"
+msgstr "Meia Noite"
+
+#: src/mousam.py:75
 msgid "Preferences"
 msgstr "Preferências"
 
-#: src/mousam.py:80
+#: src/mousam.py:83
 msgid "About Mousam"
 msgstr "Sobre Mousam"
 
-#: src/mousam.py:310
-msgid "Refresh within 5 seconds is ignored!"
-msgstr "Recarregando dentro de 5 segundos é ignorado!"
+#: src/mousam.py:125
+msgid "Getting Weather Data"
+msgstr "Adquirindo Dados Meteorológicos"
 
-#: src/mousam.py:314
+#: src/mousam.py:136
+msgid "No Internet"
+msgstr "Sem Internet"
+
+#: src/mousam.py:140
+msgid "Could not fetch data from API"
+msgstr "Não foi possível pegar dados da API"
+
+#: src/mousam.py:248
+msgid "From"
+msgstr "De"
+
+#: src/mousam.py:250
+msgid "N"
+msgstr "N"
+
+#: src/mousam.py:260
+msgid "Dewpoint"
+msgstr "Ponto de Condensação"
+
+#: src/mousam.py:276 src/mousam.py:286 src/weatherData.py:120
+#: src/weatherData.py:133 src/weatherData.py:142
+msgid "High"
+msgstr "Alto"
+
+#: src/mousam.py:277 src/mousam.py:287 src/weatherData.py:116
+#: src/weatherData.py:129 src/weatherData.py:138
+msgid "Low"
+msgstr "Baixo"
+
+#: src/mousam.py:303
+msgid "Switched to {}"
+msgstr "Trocou para {}"
+
+#: src/mousam.py:306
+msgid "Refreshed Successfully"
+msgstr "Recarregou com Sucesso"
+
+#: src/mousam.py:316
+msgid "Refresh within 5 seconds is ignored!"
+msgstr "Recarregamento dentro de 5 segundos é ignorado!"
+
+#: src/mousam.py:321
 msgid "Refreshing..."
 msgstr "Recarregando..."
 
+#: src/weatherData.py:98
+msgid "Good"
+msgstr "Bom"
+
+#: src/weatherData.py:100 src/weatherData.py:118 src/weatherData.py:131
+#: src/weatherData.py:151
+msgid "Moderate"
+msgstr "Moderado"
+
+#: src/weatherData.py:102
+msgid "Poor"
+msgstr "Ruim"
+
+#: src/weatherData.py:104
+msgid "Unhealthy"
+msgstr "Não Saudavel"
+
+#: src/weatherData.py:106
+msgid "Severe"
+msgstr "Severo"
+
+#: src/weatherData.py:108
+msgid "Hazardous"
+msgstr "Perigoso"
+
+#: src/weatherData.py:122
+msgid "Very High"
+msgstr "Muito Alto"
+
+#: src/weatherData.py:124 src/weatherData.py:155
+msgid "Extreme"
+msgstr "Extremo"
+
+#: src/weatherData.py:140
+msgid "Normal"
+msgstr "Normal"
+
+#: src/weatherData.py:147
+msgid "Calm"
+msgstr "Calmo"
+
+#: src/weatherData.py:149
+msgid "Light"
+msgstr "Leve"
+
+#: src/weatherData.py:153
+msgid "Strong"
+msgstr "Forte"
+
+#: src/weatherData.py:161
+msgid "km"
+msgstr "km"
+
+#: src/weatherData.py:164
+msgid "miles"
+msgstr "milhas"
+
 #: src/windowAbout.py:13
-msgid "Beautiful and light weight weather app build using Gtk and python"
+msgid "Beautiful and light weight weather app build using Gtk and Python"
 msgstr "Belo e leve aplicativo de clima feito com Gtk e Python"
 
 #: src/windowAbout.py:17
@@ -195,89 +404,112 @@ msgstr "Localizações"
 msgid "Add"
 msgstr "Adicionar"
 
-#: src/windowLocations.py:66
+#: src/windowLocations.py:65
 msgid "Remove location"
 msgstr "Remover localização"
 
-#: src/windowLocations.py:113
+#: src/windowLocations.py:112
 msgid "Switch city within 2 seconds is ignored!"
 msgstr "Trocar cidade dentro de 2 segundos é ignorado!"
 
-#: src/windowLocations.py:116
+#: src/windowLocations.py:115
 msgid "Selected - {}"
 msgstr "Selecionado - {}"
 
-#: src/windowLocations.py:126
+#: src/windowLocations.py:125
 msgid "Add New Location"
 msgstr "Adicionar Nova Localização"
 
-#: src/windowLocations.py:143
+#: src/windowLocations.py:142
 msgid "Search for a city"
 msgstr "Procurar por uma cidade"
 
-#: src/windowLocations.py:149 src/windowLocations.py:151
+#: src/windowLocations.py:148 src/windowLocations.py:150
 msgid "Search"
 msgstr "Procurar"
 
-#: src/windowLocations.py:206
+#: src/windowLocations.py:205
 msgid "No results found !"
 msgstr "Nenhum resultado encontrado !"
 
-#: src/windowLocations.py:230
+#: src/windowLocations.py:229
 #, python-brace-format
 msgid "Added - {0}"
 msgstr "Adicionado - {0}"
 
-#: src/windowLocations.py:232
+#: src/windowLocations.py:231
 msgid "Location already added!"
 msgstr "Localização já adicionada!"
 
-#: src/windowLocations.py:241
+#: src/windowLocations.py:240
 msgid "Add more locations to delete!"
 msgstr "Adicione mais localizações para poder apagar!"
 
-#: src/windowLocations.py:265
+#: src/windowLocations.py:263
 #, python-brace-format
 msgid "Deleted - {0}"
 msgstr "Apagado - {0}"
 
-#: src/windowPreferences.py:35
+#: src/windowPreferences.py:34
 msgid "Appearance"
 msgstr "Aparência"
 
-#: src/windowPreferences.py:59
-msgid "Open Maximized"
+#: src/windowPreferences.py:44
+msgid "Dynamic Background"
+msgstr "Fundo Dinâmico"
+
+#: src/windowPreferences.py:45
+msgid ""
+"Background changes based on current weather condition (Restart required)"
+msgstr ""
+"Mudança de fundo é baseada na condição climática atual (Necessário Reiniciar)"
+
+#: src/windowPreferences.py:58
+msgid "Launch Maximized"
 msgstr "Abrir em tela cheia"
 
-#: src/windowPreferences.py:60
-msgid "Launch the weather app in maximized mode (Restart required)"
-msgstr "Abrir o aplicativo de clima em tela cheia (Reiniciamento necessário)"
+#: src/windowPreferences.py:59
+msgid "Launch the weather app in maximized mode (Refresh required)"
+msgstr "Abrir o aplicativo de clima em tela cheia (Recarregamento necessário)"
 
-#: src/windowPreferences.py:73
+#: src/windowPreferences.py:72
 msgid "Units &amp; Measurements"
 msgstr "Unidade de Medida &amp;"
 
-#: src/windowPreferences.py:77
+#: src/windowPreferences.py:76
 msgid "°C"
 msgstr "°C"
 
-#: src/windowPreferences.py:78
+#: src/windowPreferences.py:77
 msgid "METRIC system with units like celcuis, km/h, kilometer"
 msgstr "Sistema MÉTRICO com unidades como Celsius, km/h e quilômetro"
 
-#: src/windowPreferences.py:86
+#: src/windowPreferences.py:85
 msgid "°F"
 msgstr "°F"
 
-#: src/windowPreferences.py:87
+#: src/windowPreferences.py:86
 msgid "IMPERIAL system with units like fahrenheit, mph, miles"
 msgstr ""
 "Sistema IMPERIAL com unidades como Fahrenheit, milhas por hora e milhas"
 
-#: src/windowPreferences.py:116
+#: src/windowPreferences.py:100
+msgid "Show precipitation in inch"
+msgstr "Mostrar precipitação em polegadas"
+
+#: src/windowPreferences.py:101
+msgid "This option better works during heavy preciptaion (Refresh required)"
+msgstr ""
+"Esta opção funciona melhor durante uma precipitação pesada (Recarregamento "
+"necessário)"
+
+#: src/windowPreferences.py:129
 msgid "Switching within 2 seconds is ignored!"
 msgstr "Trocando dentro de 2 segundos é ignorado!"
 
-#: src/windowPreferences.py:119
+#: src/windowPreferences.py:132
 msgid "Switched to - {}"
 msgstr "Trocou para - {}"
+
+#~ msgid "Weather"
+#~ msgstr "Clima"
