--- a/po/uk.po
+++ b/po/uk.po
@@ -11,8 +11,8 @@ msgstr ""
 "POT-Creation-Date: 2024-05-08 13:57+0530\n"
 "PO-Revision-Date: 2024-05-13 14:31+0530\n"
 "Last-Translator: Bezruchenko Simon <worcposj44@gmail.com>\n"
-"Language-Team: uk <LL@li.org>\n"
-"Language: \n"
+"Language-Team: Ukrainian <LL@li.org>\n"
+"Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
