--- a/po/fr.po
+++ b/po/fr.po
@@ -1,18 +1,18 @@
-# CERTAINS TITRES DESCRIPTIFS.
-# Copyright (C) ANNÉE DU DÉTENTEUR DU DROIT D'AUTEUR DU PAQUET
-# Ce fichier est distribué sous la même licence que le paquet PACKAGE.
-# PREMIER AUTEUR <EMAIL@ADRESSE>, ANNÉE.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, flou
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: VERSION DU PAQUET\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-15 15:53+0100\n"
-"PO-Revision-Date: ANNÉE-MO-JA HE:MI+ZONE\n"
-"Last-Translator: NOM COMPLET <EMAIL@ADRESSE>\n"
-"Language-Team: LANGUE <LL@li.org>\n"
-"Language: fr\n"
+"POT-Creation-Date: 2024-03-18 10:59+0100\n"
+"PO-Revision-Date: 2024-05-22 10:47+0200\n"
+"Last-Translator: Lalung Nicolas-Zhuang <contact@wasab.dev>\n"
+"Language-Team: French <LL@li.org>\n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +25,7 @@ msgstr "Mousam"
 #: data/io.github.amit9838.mousam.desktop.in:5
 #: data/io.github.amit9838.mousam.appdata.xml.in:7
 msgid "Beautiful and lightweight weather app"
-msgstr "Belle et légère application météo"
+msgstr "Application de météo légère et élégante"
 
 #: data/io.github.amit9838.mousam.desktop.in:10
 msgid "Weather;Mousam;Rain;Cloud;Forecast;"
@@ -37,20 +37,23 @@ msgstr "Conditions météorologiques actuelles et prévisions."
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:10
 msgid "Features:"
-msgstr "Caractéristiques :"
+msgstr "Fonctionnalités :"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:12
 msgid ""
 "Displays real-time temperature, humidity, wind speed, UV index, pressure and "
 "more"
-msgstr "Affiche la température en temps réel, l'humidité, la vitesse du vent, l'indice UV, la pression et plus"
+msgstr "Affiche la température en temps réel, l'humidité, la vitesse du vent, l'indice UV, la pression atmosphérique et "
+"plus encore"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:13
 msgid ""
 "Utilizes graphical representations, such as temperature , precipitation "
 "graphs and wind-speed with direction to provide an hourly forecast for the "
 "next 24 hours"
-msgstr "Utilise des représentations graphiques, telles que la température, les graphiques de précipitations et la vitesse du vent avec direction pour fournir une prévision horaire pour les prochaines 24 heures"
+msgstr "Utilise des représentations graphiques, telles que des graphiques de température, de précipitations "
+"et de vitesse du vent avec direction, pour fournir les prévisions"
+"des prochaines 24 heures"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:14
 msgid "Also provides tomorrow and 7-day forcasts"
@@ -58,7 +61,7 @@ msgstr "Fournit également les prévisions pour demain et les 7 jours à venir"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:15
 msgid "See conditions in metric or imperial systems"
-msgstr "Voir les conditions dans les systèmes métrique ou impérial"
+msgstr "Possibilité de choisir entre le système métrique ou impérial"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:21
 msgid "Overcast day"
@@ -86,12 +89,12 @@ msgstr "Amit Chaudhary"
 
 #: data/io.github.amit9838.mousam.gschema.xml:7
 msgid "List of cities and their coordinates."
-msgstr "Liste des villes et de leurs coordonnées."
+msgstr "Liste des villes et de leurs coordonnées"
 
 #: data/io.github.amit9838.mousam.gschema.xml:8
 msgid ""
 "Stores locations added by user in json stringified string format in string"
-msgstr "Stocke les emplacements ajoutés par l'utilisateur au format de chaîne JSON"
+msgstr "Stocke les emplacements ajoutés par l'utilisateur dans un texte au format JSON"
 
 #: data/io.github.amit9838.mousam.gschema.xml:12
 msgid "Selected city"
@@ -103,23 +106,24 @@ msgstr "Coordonnées de la ville sélectionnée"
 
 #: data/io.github.amit9838.mousam.gschema.xml:17
 msgid "Use Gradient Background"
-msgstr "Utiliser un arrière-plan en dégradé"
+msgstr "Utiliser un arrière plan en dégradé"
 
 #: data/io.github.amit9838.mousam.gschema.xml:18
-msgid "Apply gradient background on main window corresponding to weather condition"
-msgstr "Appliquer un arrière-plan en dégradé sur la fenêtre principale correspondant à la condition météorologique"
+msgid ""
+"Apply gradient background on main window corresponding to weather condition"
+msgstr "Appliquer un dégradé de couleurs correspondant aux conditions météorologiques sur la fenêtre principale"
 
 #: data/io.github.amit9838.mousam.gschema.xml:23
 msgid "Use Inch for precipitation"
-msgstr "Utiliser des pouces pour les précipitations"
+msgstr "Utiliser comme unité le pouce"
 
 #: data/io.github.amit9838.mousam.gschema.xml:28
 msgid "Launch the app in maximized mode."
-msgstr "Lancer l'application en mode maximisé."
+msgstr "Lancer l'application en mode maximisée."
 
 #: data/io.github.amit9838.mousam.gschema.xml:33
-msgid "Measurement system to use - metric, imperial"
-msgstr "Système de mesure à utiliser - métrique, impérial"
+msgid "Mesaurement sysytem to use - metric,imperial"
+msgstr "Système d'unités à utiliser - métrique,impérial"
 
 #: data/io.github.amit9838.mousam.gschema.xml:34
 msgid "metric(km, °C), imperial(mile, °F)"
@@ -163,7 +167,7 @@ msgstr "Bruine forte"
 
 #: src/constants.py:141
 msgid "Light Freezing Drizzle"
-msgstr "Bruine verglaçante légère"
+msgstr "Bruine verglaçante"
 
 #: src/constants.py:142
 msgid "Heavy Freezing Drizzle"
@@ -183,27 +187,27 @@ msgstr "Pluie forte"
 
 #: src/constants.py:146
 msgid "Light Freezing Rain"
-msgstr "Pluie verglaçante légère"
+msgstr "Légère pluie verglaçante"
 
 #: src/constants.py:147
 msgid "Heavy Freezing Rain"
-msgstr "Pluie verglaçante forte"
+msgstr "Lourde pluie verglaçante"
 
 #: src/constants.py:148
 msgid "Light Snow Fall"
-msgstr "Chute de neige légère"
+msgstr "Légères chutes de neige"
 
 #: src/constants.py:149
 msgid "Moderate Snow Fall"
-msgstr "Chute de neige modérée"
+msgstr "Chutes de neige modérée"
 
 #: src/constants.py:150
 msgid "Heavy Snow Fall"
-msgstr "Chute de neige forte"
+msgstr "Fortes chutes de neige"
 
 #: src/constants.py:151
 msgid "Snow grains"
-msgstr "Grains de neige"
+msgstr "Neige en grains"
 
 #: src/constants.py:152
 msgid "Light Rain Showers"
@@ -222,8 +226,8 @@ msgid "Light Snow Showers"
 msgstr "Averses de neige légères"
 
 #: src/constants.py:156
-msgid "Heavy Snow Showers"
-msgstr "Averses de neige fortes"
+msgid "Heavy Snow Showers "
+msgstr "Lourdes averses de neige"
 
 #: src/constants.py:158
 msgid "Thunderstorm with Hail"
@@ -235,19 +239,19 @@ msgstr "Pollution de l'air"
 
 #: src/frontendCardAirPollution.py:53
 msgid "United States AQI standard"
-msgstr "Norme AQI des États-Unis"
+msgstr "Standard AQI des États-Unis"
 
-#: src/frontendCardDayNight.py:73
+#: src/frontendCardDayNight.py:77
 msgid "Sunrise & Sunset"
-msgstr "Lever & Coucher du soleil"
+msgstr "Aube & Crépuscule"
 
-#: src/frontendCardDayNight.py:84
+#: src/frontendCardDayNight.py:88
 msgid "Sunrise"
-msgstr "Lever du soleil"
+msgstr "Lever du Soleil"
 
-#: src/frontendCardDayNight.py:97
+#: src/frontendCardDayNight.py:101
 msgid "Sunset"
-msgstr "Coucher du soleil"
+msgstr "Coucher du Soleil"
 
 #: src/frontendCardSquare.py:162 src/frontendCardSquare.py:170
 msgid "North"
@@ -255,7 +259,7 @@ msgstr "Nord"
 
 #: src/frontendCardSquare.py:163
 msgid "Northeast"
-msgstr "Nord-est"
+msgstr "Nord-Est"
 
 #: src/frontendCardSquare.py:164
 msgid "East"
@@ -263,7 +267,7 @@ msgstr "Est"
 
 #: src/frontendCardSquare.py:165
 msgid "Southeast"
-msgstr "Sud-est"
+msgstr "Sud-Est"
 
 #: src/frontendCardSquare.py:166
 msgid "South"
@@ -271,17 +275,17 @@ msgstr "Sud"
 
 #: src/frontendCardSquare.py:167
 msgid "Southwest"
-msgstr "Sud-ouest"
+msgstr "Sud-Ouest"
 
 #: src/frontendCardSquare.py:168
 msgid "West"
 msgstr "Ouest"
 
-#: src/frontendCardSquare.py:169 src/mousam.py:250
+#: src/frontendCardSquare.py:169 src/mousam.py:274
 msgid "Northwest"
-msgstr "Nord-ouest"
+msgstr "Nord-Ouest"
 
-#: src/frontendCardSquare.py:179 src/frontendHourlyDetails.py:58
+#: src/frontendCardSquare.py:179 src/frontendHourlyDetails.py:59
 msgid "Wind"
 msgstr "Vent"
 
@@ -302,7 +306,7 @@ msgstr "Indice UV"
 msgid "Feels Like • <b> {0} {1}</b>"
 msgstr "Ressenti • <b> {0} {1}</b>"
 
-#: src/frontendForecast.py:36 src/frontendForecast.py:127
+#: src/frontendForecast.py:36 src/frontendForecast.py:130
 msgid "Tomorrow"
 msgstr "Demain"
 
@@ -310,136 +314,148 @@ msgstr "Demain"
 msgid "Weekly"
 msgstr "Hebdomadaire"
 
-#: src/frontendForecast.py:125
+#: src/frontendForecast.py:128
 msgid "Today"
 msgstr "Aujourd'hui"
 
-#: src/frontendHourlyDetails.py:50
+#: src/frontendHourlyDetails.py:51
 msgid "Hourly"
-msgstr "Horaire"
+msgstr "Par heure"
 
-#: src/frontendHourlyDetails.py:66
+#: src/frontendHourlyDetails.py:67
 msgid "Precipitation"
 msgstr "Précipitations"
 
-#: src/frontendHourlyDetails.py:95
+#: src/frontendHourlyDetails.py:96
 msgctxt "wind"
 msgid "Day High"
 msgstr "Maximum du jour"
 
-#: src/frontendHourlyDetails.py:111
+#: src/frontendHourlyDetails.py:112
 msgctxt "temperature"
 msgid "Day Max"
-msgstr "Max du jour"
+msgstr "Maximum du jour"
 
-#: src/frontendHourlyDetails.py:126
+#: src/frontendHourlyDetails.py:127
 msgctxt "precipitation"
 msgid "Day High"
 msgstr "Maximum du jour"
 
-#: src/frontendHourlyDetails.py:164
+#: src/frontendHourlyDetails.py:165
 msgid "No precipitation today !"
 msgstr "Pas de précipitations aujourd'hui !"
 
-#: src/frontendHourlyDetails.py:165
+#: src/frontendHourlyDetails.py:166
 msgid "No precipitation expected today!"
 msgstr "Aucune précipitation attendue aujourd'hui !"
 
-#: src/frontendHourlyDetails.py:166
-msgid "Anticipate a precipitation-free day !"
-msgstr "Anticipez une journée sans précipitations !"
-
 #: src/frontendHourlyDetails.py:167
-msgid "Enjoy a rain-free day today!"
-msgstr "Profitez d'une journée sans pluie aujourd'hui !"
+msgid "Anticipate a precipitation-free day !"
+msgstr "Attendez-vous à une journée sans précipitations !"
 
 #: src/frontendHourlyDetails.py:168
-msgid "Umbrella status: resting. No precipitation in sight !"
-msgstr "Statut du parapluie : au repos. Aucune précipitation en vue !"
+msgid "Enjoy a rain-free day today!"
+msgstr "Profitez d'une journée sans pluie !"
 
 #: src/frontendHourlyDetails.py:169
+msgid "Umbrella status: resting. No precipitation in sight !"
+msgstr "État du parapluie : repos. Aucun précipitation en vue !"
+
+#: src/frontendHourlyDetails.py:170
 msgid "No rain in sight today!"
 msgstr "Pas de pluie en vue aujourd'hui !"
 
-#: src/frontendHourlyDetails.py:198
+#: src/frontendHourlyDetails.py:199
 msgid "Now"
 msgstr "Maintenant"
 
-#: src/frontendUiDrawDayNight.py:89
+#: src/frontendUiDrawDayNight.py:98
 msgid "Horizon"
 msgstr "Horizon"
 
-#: src/frontendUiDrawDayNight.py:99
+#: src/frontendUiDrawDayNight.py:108
 msgid "Midnight"
 msgstr "Minuit"
 
-#: src/mousam.py:76
+#: src/mousam.py:70
+msgid "Refresh"
+msgstr "Actualiser"
+
+#: src/mousam.py:79 src/shortcutsDialog.ui:45
 msgid "Preferences"
 msgstr "Préférences"
 
-#: src/mousam.py:84
+#: src/mousam.py:84 src/shortcutsDialog.ui:63
+msgid "Keyboard Shortcuts"
+msgstr "Raccourcis Claviers"
+
+#: src/mousam.py:90
 msgid "About Mousam"
 msgstr "À propos de Mousam"
 
-#: src/mousam.py:126
+#: src/mousam.py:92 src/shortcutsDialog.ui:57
+msgid "Quit"
+msgstr "Quitter"
+
+#: src/mousam.py:150
 msgid "Getting Weather Data"
-msgstr "Obtention des données météorologiques"
+msgstr "Récupération des données météorologiques"
 
-#: src/mousam.py:137
+#: src/mousam.py:161
 msgid "No Internet"
-msgstr "Pas d'Internet"
+msgstr "Pas d'internet"
 
-#: src/mousam.py:141
+#: src/mousam.py:165
 msgid "Could not fetch data from API"
-msgstr "Impossible de récupérer les données de l'API"
+msgstr "Impossible de récupérer les données depuis l'API"
 
-#: src/mousam.py:249
+#: src/mousam.py:273
 msgid "From"
 msgstr "De"
 
-#: src/mousam.py:251
+#: src/mousam.py:275
 msgid "N"
 msgstr "N"
 
-#: src/mousam.py:261
+#: src/mousam.py:285
 msgid "Dewpoint"
 msgstr "Point de rosée"
 
-#: src/mousam.py:277
+#: src/mousam.py:301
 msgctxt "pressure card"
 msgid "High"
-msgstr "Haut"
+msgstr "Élevé"
 
-#: src/mousam.py:278
+#: src/mousam.py:302
 msgctxt "pressure card"
 msgid "Low"
 msgstr "Bas"
 
-#: src/mousam.py:287
+#: src/mousam.py:311
 msgctxt "uvindex card"
 msgid "High"
-msgstr "Haut"
+msgstr "Élevé"
 
-#: src/mousam.py:288
+#: src/mousam.py:312
 msgctxt "uvindex card"
 msgid "Low"
 msgstr "Bas"
 
-#: src/mousam.py:304
+#: src/mousam.py:328
 msgid "Switched to {}"
 msgstr "Changé pour {}"
 
-#: src/mousam.py:307
+#: src/mousam.py:331
 msgid "Refreshed Successfully"
-msgstr "Rafraîchi avec succès"
+msgstr "Actualisé avec succès"
 
-#: src/mousam.py:317
+#: src/mousam.py:341
 msgid "Refresh within 5 seconds is ignored!"
-msgstr "Rafraîchir dans les 5 secondes est ignoré !"
+msgstr "Les actualisations consécutives sous 5 secondes sont ignorées !"
 
-#: src/mousam.py:322
+#: src/mousam.py:346
 msgid "Refreshing..."
-msgstr "Rafraîchissement..."
+msgstr "Actualisation..."
 
 #: src/weatherData.py:100
 msgid "Good"
@@ -463,7 +479,7 @@ msgstr "Sévère"
 
 #: src/weatherData.py:110
 msgid "Hazardous"
-msgstr "Dangereux"
+msgstr "Toxique"
 
 #: src/weatherData.py:118
 msgctxt "uvindex"
@@ -478,12 +494,12 @@ msgstr "Modéré"
 #: src/weatherData.py:122
 msgctxt "uvindex"
 msgid "High"
-msgstr "Haut"
+msgstr "Élevé"
 
 #: src/weatherData.py:124
 msgctxt "uvindex"
 msgid "Very High"
-msgstr "Très haut"
+msgstr "Très élevé"
 
 #: src/weatherData.py:126
 msgctxt "uvindex"
@@ -493,32 +509,32 @@ msgstr "Extrême"
 #: src/weatherData.py:131
 msgctxt "humidity"
 msgid "Low"
-msgstr "Bas"
+msgstr "Basse"
 
 #: src/weatherData.py:133
 msgctxt "humidity"
 msgid "Moderate"
-msgstr "Modéré"
+msgstr "Modérée"
 
 #: src/weatherData.py:135
 msgctxt "humidity"
 msgid "High"
-msgstr "Haut"
+msgstr "Élevée"
 
 #: src/weatherData.py:140
 msgctxt "pressure"
 msgid "Low"
-msgstr "Bas"
+msgstr "Basse"
 
 #: src/weatherData.py:142
 msgctxt "pressure"
 msgid "Normal"
-msgstr "Normal"
+msgstr "Normale"
 
 #: src/weatherData.py:144
 msgctxt "pressure"
 msgid "High"
-msgstr "Haut"
+msgstr "Élevée"
 
 #: src/weatherData.py:149
 msgid "Calm"
@@ -552,17 +568,18 @@ msgstr "miles"
 
 #: src/windowAbout.py:13
 msgid "Beautiful and light weight weather app build using Gtk and Python"
-msgstr "Belle et légère application météo développée avec Gtk et Python"
+msgstr "Application de météo légère et élégante développée avec GTK et Python"
 
 #: src/windowAbout.py:17
 msgid "Copyright © 2024 Mousam Developers"
-msgstr "Droit d'auteur © 2024 Développeurs Mousam"
+msgstr "Tous droits réservés © 2024 Les développeurs de Mousam"
 
 #: src/windowAbout.py:20
 msgid "translator_credits"
-msgstr "crédits_traducteur"
+msgstr "Nicolas-Zhuang Lalung"
 
 #: src/windowLocations.py:19 src/windowLocations.py:35
+#: src/shortcutsDialog.ui:39
 msgid "Locations"
 msgstr "Emplacements"
 
@@ -572,11 +589,11 @@ msgstr "Ajouter"
 
 #: src/windowLocations.py:65
 msgid "Remove location"
-msgstr "Supprimer l'emplacement"
+msgstr "Retirer l'emplacement"
 
 #: src/windowLocations.py:112
 msgid "Switch city within 2 seconds is ignored!"
-msgstr "Changer de ville dans les 2 secondes est ignoré !"
+msgstr "Les changements de villes consécutifs sous 2 secondes sont ignorés !"
 
 #: src/windowLocations.py:115
 msgid "Selected - {}"
@@ -586,22 +603,18 @@ msgstr "Sélectionné - {}"
 msgid "Add New Location"
 msgstr "Ajouter un nouvel emplacement"
 
-#: src/windowLocations.py:142
+#: src/windowLocations.py:143
 msgid "Search for a city"
 msgstr "Rechercher une ville"
 
-#: src/windowLocations.py:148 src/windowLocations.py:150
+#: src/windowLocations.py:149 src/windowLocations.py:151
 msgid "Search"
 msgstr "Rechercher"
-
-#: src/windowLocations.py:205
-msgid "No results found !"
-msgstr "Aucun résultat trouvé !"
 
 #: src/windowLocations.py:229
 #, python-brace-format
 msgid "Added - {0}"
-msgstr "Ajouté - {0}"
+msgstr "Ajoutée - {0}"
 
 #: src/windowLocations.py:231
 msgid "Location already added!"
@@ -609,12 +622,20 @@ msgstr "Emplacement déjà ajouté !"
 
 #: src/windowLocations.py:240
 msgid "Add more locations to delete!"
-msgstr "Ajouter plus d'emplacements à supprimer !"
+msgstr "Ajoutez d'autres emplacements avant de supprimer !"
 
 #: src/windowLocations.py:263
 #, python-brace-format
 msgid "Deleted - {0}"
-msgstr "Supprimé - {0}"
+msgstr "Supprimée - {0}"
+
+#: src/windowLocations.py:266
+msgid "Press enter to search"
+msgstr "Appuyez sur entrer pour rechercher"
+
+#: src/windowLocations.py:269
+msgid "No results found!"
+msgstr "Aucun résultat trouvé !"
 
 #: src/windowPreferences.py:34
 msgid "Appearance"
@@ -622,52 +643,65 @@ msgstr "Apparence"
 
 #: src/windowPreferences.py:44
 msgid "Dynamic Background"
-msgstr "Arrière-plan dynamique"
+msgstr "Utiliser l'arrière-plan dynamique"
 
 #: src/windowPreferences.py:45
-msgid "Background changes based on current weather condition (Restart required)"
-msgstr "L'arrière-plan change selon les conditions météorologiques actuelles (Redémarrage requis)"
+msgid ""
+"Background changes based on current weather condition (Restart required)"
+msgstr "Changements d'Arrière-Plan basés sur les conditions météorologiques (nécessite un redémarrage de l'application)"
 
 #: src/windowPreferences.py:58
 msgid "Launch Maximized"
-msgstr "Lancer Maximisé"
+msgstr "Lancer en mode maximisé"
 
 #: src/windowPreferences.py:59
 msgid "Launch the weather app in maximized mode (Refresh required)"
-msgstr "Lancer l'application météo en mode maximisé (Actualisation requise)"
+msgstr "Lance l'application en mode maximisé (rechargement requis)"
 
 #: src/windowPreferences.py:72
-msgid "Units & Measurements"
-msgstr "Unités & Mesures"
+msgid "Units &amp; Measurements"
+msgstr "Unités &amp; Mesures"
 
 #: src/windowPreferences.py:76
 msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like Celsius, km/h, kilometer"
-msgstr "Système MÉTRIQUE avec des unités telles que Celsius, km/h, kilomètre"
+msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgstr "Système MÉTRIQUE avec des unités telles que les degrés Celsius, km/h, kilomètres"
 
 #: src/windowPreferences.py:85
 msgid "°F"
 msgstr "°F"
 
 #: src/windowPreferences.py:86
-msgid "IMPERIAL system with units like Fahrenheit, mph, miles"
-msgstr "Système IMPÉRIAL avec des unités telles que Fahrenheit, mph, miles"
+msgid "IMPERIAL system with units like fahrenheit, mph, miles"
+msgstr "Système IMPÉRIAL, avec des unités telles que les degrés Farenheit, mph, miles"
 
 #: src/windowPreferences.py:100
 msgid "Show precipitation in inch"
 msgstr "Afficher les précipitations en pouces"
 
 #: src/windowPreferences.py:101
-msgid "This option better works during heavy precipitation (Refresh required)"
-msgstr "Cette option fonctionne mieux en cas de fortes précipitations (Actualisation requise)"
+msgid "This option better works during heavy preciptaion (Refresh required)"
+msgstr "Cette option fonctionne mieux durant les fortes précipitations (rechargement requis)"
 
 #: src/windowPreferences.py:129
 msgid "Switching within 2 seconds is ignored!"
-msgstr "Le changement dans les 2 secondes est ignoré !"
+msgstr "Les changements consécutifs sous 2 secondes sont ignorés !"
 
 #: src/windowPreferences.py:132
 msgid "Switched to - {}"
 msgstr "Changé pour - {}"
+
+#: src/shortcutsDialog.ui:29
+msgid "General"
+msgstr "Général"
+
+#: src/shortcutsDialog.ui:33
+msgid "Refresh Weather"
+msgstr "Actualiser la Météo"
+
+#: src/shortcutsDialog.ui:53
+msgid "Navigation"
+msgstr "Navigation"
