--- a/po/fr.po
+++ b/po/fr.po
@@ -667,7 +667,7 @@ msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgid "METRIC system with units like celsius, km/h, kilometer"
 msgstr "Système MÉTRIQUE avec des unités telles que les degrés Celsius, km/h, kilomètres"
 
 #: src/windowPreferences.py:85
