--- a/po/hi.po
+++ b/po/hi.po
@@ -672,7 +672,7 @@ msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgid "METRIC system with units like celsius, km/h, kilometer"
 msgstr "सेल्सियस, किमी/घंटा, किलोमीटर जैसी इकाइयों के साथ मेट्रिक प्रणाली"
 
 #: src/windowPreferences.py:85
