--- a/po/pl.po
+++ b/po/pl.po
@@ -655,7 +655,7 @@ msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgid "METRIC system with units like celsius, km/h, kilometer"
 msgstr "Metryczne jednostki miar takie jak stopnie Celcjusza, km/h, kilometr"
 
 #: src/windowPreferences.py:85
