--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -481,7 +481,7 @@ msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgid "METRIC system with units like celsius, km/h, kilometer"
 msgstr "Sistema MÉTRICO com unidades como Celsius, km/h e quilômetro"
 
 #: src/windowPreferences.py:85
