--- a/po/ro.po
+++ b/po/ro.po
@@ -672,7 +672,7 @@ msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgid "METRIC system with units like celsius, km/h, kilometer"
 msgstr "Unități în sistemul metric, cum ar fi Celsius, km/h, kilometri"
 
 #: src/windowPreferences.py:85
