--- a/po/uk.po
+++ b/po/uk.po
@@ -672,7 +672,7 @@ msgid "°C"
 msgstr "°C"
 
 #: src/windowPreferences.py:77
-msgid "METRIC system with units like celcuis, km/h, kilometer"
+msgid "METRIC system with units like celsius, km/h, kilometer"
 msgstr "МЕТРИЧНА система з одиницями, такими як цельсій, км/год, кілометр"
 
 #: src/windowPreferences.py:85
